syntax = "proto3";
package dalalstreet.api.actions;

option java_multiple_files=true;

import "models/Stock.proto";

message GetCompanyProfileRequest {
    uint32                  stock_id = 1;
}

message GetCompanyProfileResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
    }
    StatusCode status_code = 1;
    string     status_message = 2;

    models.Stock                     stock_details = 3;
}
