syntax = "proto3";

package dalalstreet.api.datastreams;

option java_multiple_files=true;

message Trade {
    uint64 trade_price = 1;
    uint64 trade_quantity = 2;
    string trade_time = 3;
}

message MarketDepthUpdate {
    uint32 stock_id = 1;
    map<uint64, uint64> ask_depth = 2;
    map<uint64, uint64> bid_depth = 3;
    map<uint64, int64> ask_depth_diff = 4;
    map<uint64, int64> bid_depth_diff = 5;
    repeated Trade latest_trades = 6;
    repeated Trade latest_trades_diff = 7;
}
